syntax = "proto3";

package musicstreaming;

// Usuario messages
message Usuario {
  string id = 1;
  string nome = 2;
  int32 idade = 3;
}

message CreateUsuarioRequest {
  string id = 1;
  string nome = 2;
  int32 idade = 3;
}

message GetUsuarioRequest {
  string id = 1;
}

message UpdateUsuarioRequest {
  string id = 1;
  string nome = 2;
  int32 idade = 3;
}

message DeleteUsuarioRequest {
  string id = 1;
}

message UsuariosResponse {
  repeated Usuario usuarios = 1;
}

message Empty {}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// Playlist messages
message Playlist {
  int32 id = 1;
  string nome = 2;
  string usuario_id = 3;
}

message CreatePlaylistRequest {
  string nome = 1;
  string usuario_id = 2;
}

message GetPlaylistRequest {
  int32 id = 1;
}

message UpdatePlaylistRequest {
  int32 id = 1;
  string nome = 2;
  string usuario_id = 3;
}

message DeletePlaylistRequest {
  int32 id = 1;
}

message PlaylistsResponse {
  repeated Playlist playlists = 1;
}

// Musica messages
message Musica {
  int32 id = 1;
  string nome = 2;
  string artista = 3;
}

message CreateMusicaRequest {
  string nome = 1;
  string artista = 2;
}

message GetMusicaRequest {
  int32 id = 1;
}

message UpdateMusicaRequest {
  int32 id = 1;
  string nome = 2;
  string artista = 3;
}

message DeleteMusicaRequest {
  int32 id = 1;
}

message MusicasResponse {
  repeated Musica musicas = 1;
}

// PlaylistMusica messages
message PlaylistMusica {
  int32 id = 1;
  int32 playlist_id = 2;
  int32 musica_id = 3;
}

message CreatePlaylistMusicaRequest {
  int32 playlist_id = 1;
  int32 musica_id = 2;
}

message GetPlaylistMusicaRequest {
  int32 id = 1;
}

message GetMusicasByPlaylistRequest {
  int32 playlist_id = 1;
}

message UpdatePlaylistMusicaRequest {
  int32 id = 1;
  int32 playlist_id = 2;
  int32 musica_id = 3;
}

message DeletePlaylistMusicaRequest {
  int32 id = 1;
}

message PlaylistMusicasResponse {
  repeated PlaylistMusica playlistMusicas = 1;
}

// Services
service UsuarioService {
  rpc CreateUsuario(CreateUsuarioRequest) returns (Usuario);
  rpc GetUsuarios(Empty) returns (UsuariosResponse);
  rpc GetUsuario(GetUsuarioRequest) returns (Usuario);
  rpc UpdateUsuario(UpdateUsuarioRequest) returns (Usuario);
  rpc DeleteUsuario(DeleteUsuarioRequest) returns (DeleteResponse);
}

service PlaylistService {
  rpc CreatePlaylist(CreatePlaylistRequest) returns (Playlist);
  rpc GetPlaylists(Empty) returns (PlaylistsResponse);
  rpc GetPlaylist(GetPlaylistRequest) returns (Playlist);
  rpc UpdatePlaylist(UpdatePlaylistRequest) returns (Playlist);
  rpc DeletePlaylist(DeletePlaylistRequest) returns (DeleteResponse);
}

service MusicaService {
  rpc CreateMusica(CreateMusicaRequest) returns (Musica);
  rpc GetMusicas(Empty) returns (MusicasResponse);
  rpc GetMusica(GetMusicaRequest) returns (Musica);
  rpc UpdateMusica(UpdateMusicaRequest) returns (Musica);
  rpc DeleteMusica(DeleteMusicaRequest) returns (DeleteResponse);
}

service PlaylistMusicaService {
  rpc CreatePlaylistMusica(CreatePlaylistMusicaRequest) returns (PlaylistMusica);
  rpc GetPlaylistMusicas(Empty) returns (PlaylistMusicasResponse);
  rpc GetPlaylistMusica(GetPlaylistMusicaRequest) returns (PlaylistMusica);
  rpc GetMusicasByPlaylist(GetMusicasByPlaylistRequest) returns (PlaylistMusicasResponse);
  rpc UpdatePlaylistMusica(UpdatePlaylistMusicaRequest) returns (PlaylistMusica);
  rpc DeletePlaylistMusica(DeletePlaylistMusicaRequest) returns (DeleteResponse);
}
